# test_cicd

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: python-ci.yml
src/test_cicd_app/: __init__.py  hello.py
tests/: conftest.py  test_hello.py
