[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-cicd-sample"
version = "0.1.0"
description = "Sample project to demonstrate GitHub Actions CI for Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

